# sun-salty-board

./: .eslintrc.cjs  .gitignore  README.md  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
electron/: autoUpdater.ts  certGen.ts  ftsSearch.ts  main.ts  platform-monitor.ts  preload.ts  sensitiveItems.ts  sync.ts  undoManager.ts  worker.ts
openspec/changes/electron-to-tauri-migration/: design.md  proposal.md  tasks.md
openspec/changes/electron-to-tauri-migration/specs/tauri-auto-updater/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-clipboard-monitor/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-global-shortcut/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-paste-simulation/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-rust-backend/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-single-instance/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-sqlite-storage/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-tray-integration/: spec.md
openspec/changes/electron-to-tauri-migration/specs/tauri-window-management/: spec.md
scripts/: after-pack.js  generate-icons.js
specs/: data-types.test.ts  dedup.test.ts  file-detection.test.ts  format-time.test.ts  fts-migration.test.ts  ipc-integration.test.ts  storage.test.ts  use-now-interval.test.ts
src/: App.tsx  main.tsx  styles.d.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  paste.rs  state.rs  tray.rs  updater.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: app.rs  categories.rs  hotkey.rs  items.rs  mod.rs  settings.rs  stats.rs  window.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs  search.rs
src/components/: FilterChips.tsx  HistoryItem.tsx  HistoryPanel.tsx  SearchBar.tsx  SettingsPanel.tsx
src/styles/: global.css
src/types/: clipboard.ts
src/utils/: i18n.ts  imageUrl.ts  magicBytes.ts  tauriApi.ts
